--- a/TempLogDictation/TempLogDictation/TempLogDictation.csproj
+++ b/TempLogDictation/TempLogDictation/TempLogDictation.csproj
@@ -37,6 +37,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net" />
     <Reference Include="System.Speech" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
