--- a/TempLogDictation/TempLogDictation/TempLogDictation.csproj
+++ b/TempLogDictation/TempLogDictation/TempLogDictation.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,6 +32,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
@@ -52,19 +54,40 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="ActionEvents.cs" />
+    <Compile Include="Commands.cs" />
+    <Compile Include="Components.cs" />
+    <Compile Include="Configuration.cs" />
+    <Compile Include="Email.cs" />
+    <Compile Include="GUIStates.cs" />
+    <Compile Include="Instruction.cs" />
+    <Compile Include="Log.cs" />
+    <Compile Include="Modes.cs" />
+    <Compile Include="PopUp.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="PopUp.Designer.cs">
+      <DependentUpon>PopUp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Status.cs" />
+    <Compile Include="TempReport.cs" />
+    <Compile Include="Temp_Log_Dictator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Temp_Log_Dictator.Designer.cs">
+      <DependentUpon>Temp_Log_Dictator.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControl1.xaml.cs">
       <DependentUpon>UserControl1.xaml</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Utilities.cs" />
+    <EmbeddedResource Include="PopUp.resx">
+      <DependentUpon>PopUp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Temp_Log_Dictator.resx">
+      <DependentUpon>Temp_Log_Dictator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
