--- a/TempLogDictation/TempLogDictation/TempLogDictation.csproj
+++ b/TempLogDictation/TempLogDictation/TempLogDictation.csproj
@@ -82,6 +82,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Timeout.cs" />
     <Compile Include="UserControl1.xaml.cs">
       <DependentUpon>UserControl1.xaml</DependentUpon>
     </Compile>
